NULL =

SUBDIRS = modules src

pkgconfig_DATA = nx-x11.pc

ACLOCAL_AMFLAGS = -I m4

MAINTAINERCLEANFILES =				\
    $(srcdir)/autom4te.cache/*			\
    $(srcdir)/build-aux/*			\
    $(srcdir)/Makefile.in			\
    $(srcdir)/src/Makefile.in			\
    $(srcdir)/src/xkb/Makefile.in		\
    $(srcdir)/src/util/Makefile.in		\
    $(srcdir)/src/xcms/Makefile.in		\
    $(srcdir)/src/xlibi18n/Makefile.in		\
    $(srcdir)/modules/om/generic/Makefile.in	\
    $(srcdir)/modules/om/Makefile.in		\
    $(srcdir)/modules/Makefile.in		\
    $(srcdir)/modules/im/ximcp/Makefile.in	\
    $(srcdir)/modules/im/Makefile.in		\
    $(srcdir)/modules/lc/Makefile.in		\
    $(srcdir)/modules/lc/gen/Makefile.in	\
    $(srcdir)/modules/lc/def/Makefile.in	\
    $(srcdir)/modules/lc/Utf8/Makefile.in	\
    $(srcdir)/include/Makefile.in		\
    $(srcdir)/aclocal.m4			\
    $(srcdir)/src/config.h.in			\
    $(srcdir)/src/config.h.in~			\
    $(srcdir)/configure				\
    $(srcdir)/m4/libtool.m4			\
    $(srcdir)/m4/lt~obsolete.m4			\
    $(srcdir)/m4/ltoptions.m4			\
    $(srcdir)/m4/ltsugar.m4			\
    $(srcdir)/m4/ltversion.m4			\
    $(NULL)

DISTCLEANFILES=$(MAINTAINERCLEANFILES)
