NULL =

x11includedir=${includedir}/nx-X11
x11include_HEADERS=		\
	X11/XKBlib.h		\
	X11/Xcms.h		\
	X11/Xlib.h		\
	X11/Xlibint.h		\
	X11/Xlocale.h		\
	X11/Xresource.h		\
	X11/Xutil.h		\
	X11/cursorfont.h	\
	X11/Xregion.h		\
	X11/ImUtil.h		\
	$(NULL)

nodist_x11include_HEADERS=\
	X11/XlibConf.h

xtransincludedir=${includedir}/nx-X11/Xtrans
xtransinclude_HEADERS =		\
	xtrans/Xtransint.h	\
	xtrans/Xtrans.h		\
	xtrans/Xtranslcl.c	\
	xtrans/transport.c	\
	xtrans/Xtrans.c		\
	xtrans/Xtranssock.c	\
	xtrans/Xtransutil.c	\
        $(NULL)

EXTRA_DIST = \
	X11/XlibConf.h.in
